// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cosmos fixtures: Artwork:rendered 1`] = `
<div
  style={
    Object {
      "width": 160,
    }
  }
>
  <img
    alt="cover"
    className="sc-bdVaJa gSMROs"
    draggable={false}
    src="https://upload.wikimedia.org/wikipedia/en/7/7a/G-Eazy_These_Things_Happen.jpg"
  />
</div>
`;

exports[`Cosmos fixtures: Chevron:icon 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": 160,
      "width": 160,
    }
  }
>
  <svg
    viewBox="0 0 160 160"
  >
    <polygon
      fill="#D8D8D8"
      points="110.112698 79.5685425 55.5672438 136.137085 50.1126984 130.480231 99.2036075 79.5685425 50.1126984 28.6568542 55.5672438 23"
    />
  </svg>
</div>
`;

exports[`Cosmos fixtures: DefaultCover:icon 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": 160,
      "width": 160,
    }
  }
>
  <svg
    style={
      Object {
        "background": "#1B1B1B",
      }
    }
    version="1.1"
    viewBox="0 0 160 160"
  >
    <circle
      cx="80"
      cy="80"
      fill="#333334"
      id="Full-Disk"
      r="75"
    />
    <circle
      cx="80"
      cy="80"
      fill="#1B1B1B"
      id="Ring-Outer"
      r="25"
    />
    <circle
      cx="80"
      cy="80"
      fill="#333333"
      id="Ring-Inner"
      r="21"
    />
    <circle
      cx="80"
      cy="80"
      fill="#1B1B1B"
      id="Inner-Circle"
      r="12"
    />
  </svg>
</div>
`;

exports[`Cosmos fixtures: Dots:icon 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": 160,
      "width": 160,
    }
  }
>
  <svg
    version="1.1"
    viewBox="0 0 160 160"
  >
    <circle
      cx="40"
      cy="80"
      fill="#D8D8D8"
      r="10"
    />
    <circle
      cx="80"
      cy="80"
      fill="#D8D8D8"
      r="10"
    />
    <circle
      cx="120"
      cy="80"
      fill="#D8D8D8"
      r="10"
    />
  </svg>
</div>
`;

exports[`Cosmos fixtures: Heart:icon 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": 160,
      "width": 160,
    }
  }
>
  <svg
    version="1.1"
    viewBox="0 0 160 160"
  >
    <path
      d="M121.421683,43.5787115 C132.859965,55.0169934 132.859965,73.5621127 121.421683,85.0003946 L83.5355339,122.886544 C81.5829124,124.839165 78.4170876,124.839165 76.4644661,122.886544 L38.5783168,85.0003946 C27.1400349,73.5621127 27.1400349,55.0169934 38.5783168,43.5787115 C50.0165988,32.1404295 68.561718,32.1404295 80,43.5787115 C91.438282,32.1404295 109.983401,32.1404295 121.421683,43.5787115 Z"
      fill="#D0021B"
    />
    <path
      d="M117.886149,47.1142454 C108.400489,37.6285849 93.0211944,37.6285849 83.5355339,47.1142454 L80,50.6497793 L76.4644661,47.1142454 C66.9788056,37.6285849 51.5995112,37.6285849 42.1138507,47.1142454 C32.6281902,56.5999059 32.6281902,71.9792002 42.1138507,81.4648607 L80,119.35101 L117.886149,81.4648607 C127.37181,71.9792002 127.37181,56.5999059 117.886149,47.1142454 Z"
      fill="none"
      stroke="#D0021B"
      strokeWidth="10"
    />
  </svg>
</div>
`;

exports[`Cosmos fixtures: Pause:icon 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": 160,
      "width": 160,
    }
  }
>
  <svg
    version="1.1"
    viewBox="0 0 160 160"
  >
    <path
      d="M102,43 C100.343146,43 99,44.3431458 99,46 L99,114 C99,115.656854 100.343146,117 102,117 C103.656854,117 105,115.656854 105,114 L105,46 C105,44.3431458 103.656854,43 102,43 Z"
      stroke="#EEEEEE"
      strokeWidth="10"
    />
    <path
      d="M58,43 C56.3431458,43 55,44.3431458 55,46 L55,114 C55,115.656854 56.3431458,117 58,117 C59.6568542,117 61,115.656854 61,114 L61,46 C61,44.3431458 59.6568542,43 58,43 Z"
      stroke="#EEEEEE"
      strokeWidth="10"
    />
  </svg>
</div>
`;

exports[`Cosmos fixtures: Play:icon 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": 160,
      "width": 160,
    }
  }
>
  <svg
    version="1.1"
    viewBox="0 0 160 160"
  >
    <path
      d="M126.592676,80.876213 L57.48172,118.866829 C56.997739,119.132875 56.3897215,118.956204 56.1236748,118.472223 C56.0425406,118.324627 56,118.15893 56,117.990503 L56,42.0092723 C56,41.4569875 56.4477153,41.0092723 57,41.0092723 C57.1684262,41.0092723 57.3341239,41.0518129 57.48172,41.1329471 L126.592676,79.1235627 C127.076657,79.3896093 127.253328,79.9976269 126.987282,80.4816079 C126.895857,80.6479235 126.758992,80.7847885 126.592676,80.876213 Z"
      fill="#EEEEEE"
      id="path-1"
      stroke="#EEEEEE"
      strokeWidth="10"
    />
  </svg>
</div>
`;

exports[`Cosmos fixtures: Plus:icon 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": 160,
      "width": 160,
    }
  }
>
  <svg
    version="1.1"
    viewBox="0 0 160 160"
  >
    <path
      d="M70,70 L70,30 C70,24.4771525 74.4771525,20 80,20 C85.5228475,20 90,24.4771525 90,30 L90,70 L130,70 C135.522847,70 140,74.4771525 140,80 C140,85.5228475 135.522847,90 130,90 L90,90 L90,130 C90,135.522847 85.5228475,140 80,140 C74.4771525,140 70,135.522847 70,130 L70,90 L30,90 C24.4771525,90 20,85.5228475 20,80 C20,74.4771525 24.4771525,70 30,70 L70,70 Z"
      fill="#EEEEEE"
    />
  </svg>
</div>
`;

exports[`Cosmos fixtures: SkipBackwards:icon 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": 160,
      "width": 160,
    }
  }
>
  <svg
    version="1.1"
    viewBox="0 0 160 160"
  >
    <g
      id="Symbol/Skip-Forward"
      transform="translate(80.000000, 80.000000) rotate(180.000000) translate(-80.000000, -80.000000)"
    >
      <g
        id="Symbol/Play"
        transform="translate(-20.000000, 0.000000)"
      >
        <path
          d="M126.592676,80.876213 L57.48172,118.866829 C56.997739,119.132875 56.3897215,118.956204 56.1236748,118.472223 C56.0425406,118.324627 56,118.15893 56,117.990503 L56,42.0092723 C56,41.4569875 56.4477153,41.0092723 57,41.0092723 C57.1684262,41.0092723 57.3341239,41.0518129 57.48172,41.1329471 L126.592676,79.1235627 C127.076657,79.3896093 127.253328,79.9976269 126.987282,80.4816079 C126.895857,80.6479235 126.758992,80.7847885 126.592676,80.876213 Z"
          fill="#EEEEEE"
          stroke="#EEEEEE"
          strokeWidth="10"
        />
      </g>
      <path
        d="M131.25,45 C130.559644,45 130,45.5596441 130,46.25 L130,113.75 C130,114.440356 130.559644,115 131.25,115 C131.940356,115 132.5,114.440356 132.5,113.75 L132.5,46.25 C132.5,45.5596441 131.940356,45 131.25,45 Z"
        stroke="#EEEEEE"
        strokeWidth="10"
      />
    </g>
  </svg>
</div>
`;

exports[`Cosmos fixtures: SkipForwards:icon 1`] = `
<div
  style={
    Object {
      "background": "black",
      "height": 160,
      "width": 160,
    }
  }
>
  <svg
    version="1.1"
    viewBox="0 0 160 160"
  >
    <g
      id="Symbol/Play"
      transform="translate(-20.000000, 0.000000)"
    >
      <path
        d="M126.592676,80.876213 L57.48172,118.866829 C56.997739,119.132875 56.3897215,118.956204 56.1236748,118.472223 C56.0425406,118.324627 56,118.15893 56,117.990503 L56,42.0092723 C56,41.4569875 56.4477153,41.0092723 57,41.0092723 C57.1684262,41.0092723 57.3341239,41.0518129 57.48172,41.1329471 L126.592676,79.1235627 C127.076657,79.3896093 127.253328,79.9976269 126.987282,80.4816079 C126.895857,80.6479235 126.758992,80.7847885 126.592676,80.876213 Z"
        fill="#EEEEEE"
        stroke="#EEEEEE"
        strokeWidth="10"
      />
    </g>
    <path
      d="M131.25,45 C130.559644,45 130,45.5596441 130,46.25 L130,113.75 C130,114.440356 130.559644,115 131.25,115 C131.940356,115 132.5,114.440356 132.5,113.75 L132.5,46.25 C132.5,45.5596441 131.940356,45 131.25,45 Z"
      stroke="#EEEEEE"
      strokeWidth="10"
    />
  </svg>
</div>
`;
